// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DropdownItem > should match its default snapshot 1`] = `
<a
  class="block w-full select-none px-4 text-sm leading-5 text-left hover:no-underline text-sm bg-white text-gray-900 hover:bg-gray-50 hover:text-black active:bg-gray-100 active:text-black [.dropdown-dark_&]:hover:bg-gray-800 [.dropdown-dark_&]:bg-gray-850 [.dropdown-dark_&]:text-white dark:text-white dark:hover:bg-gray-800 dark:hover:text-white"
  data-id="sds-dropdown-item"
  disabled="false"
  role="menuitem"
>
  <!-- @slot Dropdown item content. -->
  <span
    class="flex py-2"
  >
    
    
  </span>
</a>
`;

exports[`DropdownItem > should match its variant primary snapshot 1`] = `
<a
  class="block w-full select-none px-4 text-sm leading-5 text-left hover:no-underline text-sm bg-white text-red-600 hover:bg-red-50 hover:text-red-700 active:bg-red-100 active:text-red-700 [.dropdown-dark_&]:hover:bg-gray-800 [.dropdown-dark_&]:bg-gray-850 [.dropdown-dark_&]:text-red-300 dark:text-red-300 dark:hover:bg-gray-800 dark:hover:text-red-600"
  data-id="sds-dropdown-item"
  disabled="false"
  role="menuitem"
>
  <!-- @slot Dropdown item content. -->
  <span
    class="flex py-2"
  >
    
    
  </span>
</a>
`;
